adds dev dockerfile for express to use hmr nodemon, adds docker-compose override to default to dev environment

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,3 +12,14 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+  express:
+    build:
+      context: ./express
+      dockerfile: Dockerfile.dev
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./express:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
