--- a/express/package.json
+++ b/express/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
