--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -21,3 +21,16 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+  flask:
+    build:
+      context: ./flask
+      dockerfile: Dockerfile
+    environment:
+      - FLASK_ENV=development
+      - FLASK_APP=app.py
+      - FLASK_DEBUG=1
+    volumes:
+      - ./flask:/app
+    ports:
+      - "5002:5002"
+    command: flask run --host=0.0.0.0 --port=5002
