--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -8,4 +8,7 @@ MarkupSafe==3.0.2
 pymongo==4.11.1
 Werkzeug==3.1.3
 watchdog
-openai==0.28
+openai>=1.58.1,<2.0.0
+python-dotenv==1.0.1
+langchain_openai
+langchain_core
