--- a/express/package.json
+++ b/express/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "form-data": "^4.0.2",
     "mongoose": "^8.10.0",
     "multer": "^1.4.4"
   },
