--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,31 +11,14 @@ services:
     volumes:
       - mongo_data:/data/db
 
-  # express:
-  #   build: ./express
-  #   container_name: express
-  #   depends_on:
-  #     - mongodb
-  #   environment:
-  #     MONGO_INITDB_ROOT_USERNAME: root
-  #     MONGO_INITDB_ROOT_PASSWORD: examplepassword
-  #     MONGO_HOST: mongodb
-  #     MONGO_PORT: 27017
-  #     MONGO_AUTH_SOURCE: admin
-  #   ports:
-  #     - "3000:3000"
-
   flask:
     build: ./flask
     container_name: flask
     depends_on:
       - mongodb
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: examplepassword
-      MONGO_HOST: mongodb
-      MONGO_PORT: 27017
-      MONGO_AUTH_SOURCE: admin
+      MONGO_URI: mongodb://root:examplepassword@mongodb:27017/?authSource=admin
+      MONGO_DB_NAME: mydatabase
       PYTHONUNBUFFERED: ${PYTHONUNBUFFERED}
       AZURE_OPENAI_ENDPOINT: ${AZURE_OPENAI_ENDPOINT}
       AZURE_OPENAI_KEY: ${AZURE_OPENAI_KEY}
