--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,6 +9,8 @@ services:
     volumes:
       - mongo_data:/data/db
     command: mongod
+    networks:
+      - app
 
   flask:
     build: ./flask
