--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -18,11 +18,11 @@ services:
     environment:
       - FLASK_APP=flask.main
       - FLASK_ENV=development
-      - FLASK_APP=main
+      - FLASK_APP=main.py
       - FLASK_DEBUG=1
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app/flask
     volumes:
-      - ./flask:/app
+      - ./:/app
     ports:
       - "5002:5002"
     command: flask run --host=0.0.0.0 --port=5002 --reload
