--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       AZURE_OPENAI_ENDPOINT: ${AZURE_OPENAI_ENDPOINT}
       AZURE_OPENAI_KEY: ${AZURE_OPENAI_KEY}
       PLATFORM_OPENAI_KEY: ${PLATFORM_OPENAI_KEY}
+      SECRET_KEY: dev-secret-key
+      ADMIN_PASSWORD: adminpass
     ports:
       - "5002:5002"
     command: gunicorn --bind 0.0.0.0:5002 main:app
