--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
 
   flask:
     build: ./flask
+    env_file:
+      - ./flask/.env
     container_name: flask
     depends_on:
       - mongodb
