--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,19 +1,54 @@
+annotated-types==0.7.0
+anyio==4.9.0
 blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
+distro==1.9.0
 dnspython==2.7.0
+exceptiongroup==1.2.2
 Flask==3.1.0
-Flask-Cors
-Flask-PyMongo
+flask-cors==5.0.1
+Flask-Login==0.6.3
+Flask-PyMongo==3.0.1
+gunicorn==23.0.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.7.0
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jiter==0.9.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.3.59
+langchain-openai==0.3.16
+langsmith==0.3.42
 MarkupSafe==3.0.2
+openai==1.77.0
+orjson==3.10.18
+packaging==24.2
+pluggy==1.5.0
+pydantic==2.11.4
+pydantic_core==2.33.2
 pymongo==4.11.1
-Werkzeug==3.1.3
-watchdog
-openai>=1.58.1,<2.0.0
+pytest==8.3.5
 python-dotenv==1.0.1
-langchain_openai
-langchain_core
-pytest
-gunicorn
-flask-login==0.6.3
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+sniffio==1.3.1
+tenacity==9.1.2
+tiktoken==0.9.0
+tomli==2.2.1
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+watchdog==6.0.0
+Werkzeug==3.1.3
+zipp==3.21.0
+zstandard==0.23.0
