Switch from Azure OpenAI to Platform OpenAI API
- Update openai_service.py to use ChatOpenAI instead of AzureChatOpenAI
- Remove Azure-specific configuration (endpoint, deployment, API version)
- Use PLATFORM_OPENAI_KEY environment variable for authentication
- Update docker-compose.yml to load environment variables from root .env file
- Successfully tested OpenAI connection with Platform API key

This resolves authentication issues with expired Azure OpenAI key by switching
to regular OpenAI Platform API using the available sk-proj- key.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,19 +15,13 @@ services:
   flask:
     build: ./flask
     env_file:
-      - ./flask/.env
+      - .env
     container_name: flask
     depends_on:
       - mongodb
     environment:
       MONGO_URI: mongodb://root:examplepassword@mongodb:27017/?authSource=admin
       MONGO_DB_NAME: mydatabase
-      PYTHONUNBUFFERED: ${PYTHONUNBUFFERED}
-      AZURE_OPENAI_ENDPOINT: ${AZURE_OPENAI_ENDPOINT}
-      AZURE_OPENAI_KEY: ${AZURE_OPENAI_KEY}
-      PLATFORM_OPENAI_KEY: ${PLATFORM_OPENAI_KEY}
-      SECRET_KEY: ${SECRET_KEY}
-      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
     ports:
       - "5002:5002"
     command: gunicorn --bind 0.0.0.0:5002 main:app
