Fix admin password authentication in Docker
- Fix env_file path in docker-compose.yml from '.env' to './flask/.env'
- Admin password 'adminpass' now works correctly in development environment
- Environment variables are properly loaded from Flask directory
- Production docker-compose.prod.yml already had correct path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   flask:
     build: ./flask
     env_file:
-      - .env
+      - ./flask/.env
     container_name: flask
     depends_on:
       - mongodb
